# pelite-rs

./: .gitignore  Cargo.toml  readme.md
dummy/: ReadMe.txt  copy_bins.bat  dllmain.cpp  dummy.cpp  dummy.def  dummy.h  dummy.sln  dummy.vcxproj  dummy.vcxproj.filters  dummy64.def  stdafx.h
examples/: main.rs  readme.rs
src/: image.rs  lib.rs  resources.rs
src/pe32/: exports.rs  image.rs  imports.rs  mod.rs  pefile.rs  peview.rs  relocs.rs  resources.rs
src/pe64/: exports.rs  image.rs  imports.rs  mod.rs  peview.rs  relocs.rs  resources.rs
tests/: pe32.rs  pe64.rs
