[package]
name = "pelite"
version = "0.2.0"
authors = ["CasualX <CasualX@github.com>"]

description = "Lightweight, memory-safe, zero-allocation library for reading and navigating PE binaries."

documentation = "https://crates.fyi/crates/pelite/"
homepage = "https://github.com/CasualX/pelite-rs"
repository = "https://github.com/CasualX/pelite-rs"

readme = "readme.md"

keywords = ["PE", "PE32", "PE32plus", "exe", "dll"]

license = "MIT"
